[package]
name = "testproblem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
google-cloud-gax = "0.11.0"
google-cloud-googleapis = { version = "0.7.0", features = ["pubsub"] }
google-cloud-pubsub = "0.11.0"
openssl = "0.10.45"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
